Don't reuse JVM forks in tests